:memo: Add acknowledgements to report #62
+ Closes #62 by adding acknowledgements to report

--- a/doc/prefacios/prefacio.tex
+++ b/doc/prefacios/prefacio.tex
@@ -59,6 +59,15 @@ Y para que conste, expiden y firman el presente informe en Granada a junio de 20
 
 \chapter*{Agradecimientos}
 
+Aprovechando el fin de esta etapa académica, me gustaría agradecer a las personas que me han apoyado y gracias a las cuales soy quien soy.
 
+En primer lugar, quiero agradecer el cariño de mi familia, especialmente a mis padres por su apoyo incondicional y a mi hermana por entenderme como nadie y por las pequeñas llamadas de 5 minutos que acaban durando horas.
 
+También quiero dar las gracias a tantos profesores y compañeros de la universidad que no han dudado en prestar su ayuda, enseñándome tanto y compartiendo su pasión por este campo del conocimiento. A su vez, a la comunidad de software libre y a todas las personas que aportan desinteresadamente su granito de arena, confiando en llegar más lejos cooperando que compitiendo. 
+
+Por último, a los \texttt{\normalfont\textit{Mákinas}} y los\texttt{\normalfont\textit{ Checolegas}}, la gente con la que he pasado algunos de los mejores momentos de esta etapa, con un gran corazón y con la que me siento en mi sitio.
+
+Es imposible expresar todo lo que me habéis dado estos años y lo feliz que soy de teneros en mi vida. Un abrazo muy grande para todos.
+
+\vspace*{1cm}
 
