:memo: Use consistent naming for UltraStar format #54
+ Closes #54 by switching 'UltraStar .txt' mentions for 'UltraStar format'

--- a/doc/secciones/03_estado_del_arte.tex
+++ b/doc/secciones/03_estado_del_arte.tex
@@ -25,6 +25,7 @@ Algunas de las tareas son más complejas o tardan más en completarse. Definir l
 \section{Estado del arte}
 
 \subsection{Formatos para definir de canciones}
+\label{sec:formatcomparison}
 
 Para conocer que formatos son los más usados se han analizado los videojuegos de karaoke actuales.
 
