--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -125,3 +125,45 @@
 	
 	copyright = {arXiv.org perpetual, non-exclusive license}
 }
+
+@misc{rfc3629,
+	series =    {Request for Comments},
+	number =    3629,
+	howpublished =  {RFC 3629},
+	publisher = {RFC Editor},
+	doi =       {10.17487/RFC3629},
+	url =       {https://www.rfc-editor.org/info/rfc3629},
+	author =    {François Yergeau},
+	title =     {{UTF-8, a transformation format of ISO 10646}},
+	pagetotal = 14,
+	year =      2003,
+	month =     nov,
+	abstract =  {ISO/IEC 10646-1 defines a large character set called the Universal Character Set (UCS) which encompasses most of the world's writing systems. The originally proposed encodings of the UCS, however, were not compatible with many current applications and protocols, and this has led to the development of UTF-8, the object of this memo. UTF-8 has the characteristic of preserving the full US-ASCII range, providing compatibility with file systems, parsers and other software that rely on US-ASCII values but are transparent to other values. This memo obsoletes and replaces RFC 2279.},
+}
+
+@techreport{pep8,
+	author  = {Guido van Rossum and Barry Warsaw and Nick Coghlan},
+	title   = {Style Guide for {Python} Code},
+	year    = {2001},
+	type    = {PEP},
+	number  = {8},
+	url     = {https://www.python.org/dev/peps/pep-0008/},
+}
+
+@techreport{pep517,
+	author  = {Nathaniel J. Smith and Thomas Kluyver},
+	title   = {A build-system independent format for source trees},
+	year    = {2015},
+	type    = {PEP},
+	number  = {517},
+	url     = {https://peps.python.org/pep-0517/},
+}
+
+@techreport{pep518,
+	author  = {Brett Cannon and Nathaniel Smith and Donald Stufft},
+	title   = {Specifying Minimum Build System Requirements for {Python} Projects},
+	year    = {2016},
+	type    = {PEP},
+	number  = {518},
+	url     = {https://peps.python.org/pep-0518/},
+}
