--- a/doc/secciones/01_introduccion.tex
+++ b/doc/secciones/01_introduccion.tex
@@ -1,6 +1,6 @@
 \chapter{Introducción}
 
-Este proyecto es software libre, y está liberado con la licencia AGPLv3 \cite{agpl}.
+Este proyecto es software libre, liberado con la licencia AGPLv3 \cite{agpl} y publicado en un repositorio público\footnote{\url{https://github.com/dipzza/ultrastar-song2txt}}.
 
 \section{Motivación}
 \label{sec:motivation}
@@ -24,3 +24,17 @@ Este trabajo persigue ayudar en la creación de canciones para videojuegos de ka
 
 
 Para ello se pretende \textbf{mejorar o integrar los procesos de automatización existentes para la creación de canciones para videojuegos de karaoke.}
+
+\section{Terminología}
+
+\begin{itemize}
+	\item{Nota. Representación musical de un sonido, con un tono constante y una duración determinada.}
+	\item{Tono. Cualidad de los sonidos que permite su ordenación en una escala relacionada con la frecuencia.}
+	\item{Frecuencia fundamental. Aquella que representa el tono simple más bajo presente en una nota.}
+	\item{MIDI. Estándar técnico en el que se definen 128 notas por su número, con equivalencias a la nomenclatura estándar inglesa.}
+	\item{Pulsación. Unidad básica en música para medir el tiempo. Una sucesión constante divide el tiempo en partes iguales.}
+	\item{Pulsaciones por minuto. Unidad empleada para medir el ritmo en música. Equivale al número de pulsaciones que caben en un minuto.}
+	\item{Fonema. Unidad sonora mínima que puede distinguir una palabra de otra en un lenguaje dado.}
+	\item{Software libre. Aquel cuyo código fuente puede ser estudiado, modificado, utilizado libremente para cualquier propósito y redistribuido con cambios o mejoras.}
+	\item{Software privativo. Aquel del cual no existe una forma libre de acceso a su código fuente, en el que uno o varios de los derechos de usar, modificar, compartir modificaciones o el software están restringidos.}
+\end{itemize}
