:memo: Consistent title for report #65
+ Closes #65 by making all titles / subtitles the same and more descriptive.

--- a/doc/portada/portada.tex
+++ b/doc/portada/portada.tex
@@ -15,11 +15,11 @@
 \textsc{ GRADO EN INGENIERÍA INFORMÁTICA}
 \vspace{1cm}
 
-{\Huge\bfseries UltraStar: Song to txt \\}
+{\texttt{\normalfont\Huge\bfseries UltraStar: Song2txt \\}}
 \noindent\rule[-1ex]{\textwidth}{3pt}
 
 \vspace{3.5ex}
-{\large\bfseries Creación automática de archivos para Karaoke}
+{\large\bfseries Adaptación automática de canciones para juegos de karaoke}
 \end{minipage}
 
 \vspace{2.5cm}
