--- a/doc/prefacios/prefacio.tex
+++ b/doc/prefacios/prefacio.tex
@@ -37,7 +37,7 @@ D. \textbf{Juan Julián Merelo Guervós}, Profesor del departamento de Arquitect
 
 \vspace{0.5cm}
 
-Que el presente trabajo, titulado \textit{\textbf{UltraStar: Song to txt}},
+Que el presente trabajo, titulado\texttt{\normalfont{\textit{\textbf{ UltraStar: Song2txt}}}},
 ha sido realizado bajo mi supervisión por \textbf{Francisco Javier Bolívar Expósito}, y autorizo la defensa de dicho trabajo ante el tribunal
 que corresponda.
 
