--- a/doc/proyecto.tex
+++ b/doc/proyecto.tex
@@ -70,38 +70,15 @@
 	% Introducción 
 	\input{secciones/01_introduccion}
 
-	% Descripción del problema y hasta donde se llega
-	\input{secciones/02_descripcion}
-
-	% Estado del arte
-	% 	1. Crítica al estado del arte
-	% 	2. Propuesta
-	\input{secciones/03_estado_del_arte}
+	% Descripción del problema y Estado del arte
+	\input{secciones/02_estado_del_arte}
 	
-	\input{secciones/04_planificacion}
+	\input{secciones/03_planificacion}
 
-	% Análisis del problema
-	% 1. Análisis de requisitos
-	% 2. Análisis de las soluciones
-	% 3. Solucion propuesta
-	% 4. Análisis de seguridad
-	\input{secciones/05_analisis}
-
-	% Desarrollo bajo sprints: 
-	% 	1. Permitir registros y login de usuarios
-	% 	2. Desarrollo del sistema de incidencias
-	% 	3. Desarrollo del sistema de denuncias administrativas y accidentes
-	% 	4. Desarrollo del sistema de croquis
-	%   5. Instalación de la aplicación de manera automática
-	\input{secciones/06_implementacion}
-
-	% Presupuesto
+	\input{secciones/04_implementacion}
 
 	% Conclusiones
-	\input{secciones/07_conclusiones}
-
-	% Trabajos futuros
-
+	\input{secciones/05_conclusiones}
 
 	
 	\bibliography{bibliografia}
