:memo: Some redactions improvements #59

--- a/doc/prefacios/prefacio.tex
+++ b/doc/prefacios/prefacio.tex
@@ -18,7 +18,7 @@ Francisco Javier Bolívar Expósito
 
 \noindent\textbf{Resumen}
 
-La adaptación de canciones para videojuegos de karaoke es un proceso complejo que requiere conocimientos musicales, lo que provoca que el número de canciones disponibles sea reducido. Aprovechando los avances en inteligencia artificial, gracias a los cuales es posible resolver problemas con sistemas informáticos que anteriormente requerían la intervención de un humano, este trabajo tiene el propósito de facilitar la adaptación de canciones avanzando en su automatización.
+La adaptación de canciones para videojuegos de karaoke es un proceso complejo y manual que requiere conocimientos musicales, lo que provoca que el número de canciones disponibles sea reducido. Aprovechando los avances en inteligencia artificial, gracias a los cuales es posible resolver problemas con sistemas informáticos que anteriormente requerían la intervención de un humano; este trabajo tiene el propósito de facilitar la adaptación de canciones avanzando en su automatización.
 
 Para ello, utilizando un desarrollo ágil, se ha implementado una aplicación en Python que a partir del audio de una canción estima los tonos de cada nota interpretada por el cantante y los guarda en un archivo con el formato estándar UltraStar para videojuegos de karaoke, con una precisión superior a soluciones existentes. Adicionalmente, la librería desarrollada para trabajar con el formato UltraStar puede ser usada independientemente por otros proyectos.
 
